.k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: ClusterIP
  selector:
    app: devops
    aula: "03"
  ports:
    - port: 80
      targetPort: 80
      name: http
